tests/codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.layout.where.expected.method/reader-layout-where-expected-method.mon
;; TEST-ID: tests.codegen.reader-error.reader-layout-where-expected-method
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/typeclass-data-layout
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected 'method' in layout where block
;; TEST-ATOM: atom.reader.error.reader.layout.where.expected.method
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.layout.where.expected.method
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected 'method' in layout where block
;; TEST-READER-PATH: reader.c:5118 parser.layout
;; TEST-CODEGEN-PATH: diagnostic.parser.layout
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:5118 Expected 'method' in layout where block
;; TEST-USES-ATOM: atom.reader.error.reader.layout.where.expected.method
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.layout
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/typeclass-data-layout/atom.reader.error.reader.layout.where.expected.method
;; TEST-MENU-PATH: codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.layout.where.expected.method
;; TEST-ATOM-LEAF: atom.reader.error.reader.layout.where.expected.method
;; TEST-CLI-TARGET: codegen errors reader typeclass-data-layout

(module Main)
(layout Point where field)
